Forgot to update the main folder

--- a/skins/playerCard/default/style.css
+++ b/skins/playerCard/default/style.css
@@ -90,7 +90,7 @@
     float: left;
 }
 
-#logoLeaderboard {
+#logoLeaderboardPlayer {
     background-image: url("../../../pictures/scoresaber_icon_32x32.png");
     background-repeat: no-repeat;
     background-size: contain;
