--- a/skins/songCard/default/style.css
+++ b/skins/songCard/default/style.css
@@ -104,7 +104,7 @@
     float: left;
 }
 
-#logoLeaderboard {
+#logoLeaderboardSong {
     background-image: url("../../../pictures/scoresaber_icon_32x32.png");
     background-repeat: no-repeat;
     background-size: contain;
