--- a/skins/songCard/freemium/style.css
+++ b/skins/songCard/freemium/style.css
@@ -193,7 +193,7 @@
     background-color: rgba(0, 199, 161, 0.73);
 }
 
-#logoLeaderboard {
+#logoLeaderboardSong {
     background-image: url("../../../pictures/scoresaber_icon_32x32.png");
     background-repeat: no-repeat;
     background-size: contain;
