--- a/skins/songCard/reselim/style.css
+++ b/skins/songCard/reselim/style.css
@@ -220,7 +220,7 @@
     font-size: 0.7em;
 }
 
-#logoLeaderboard {
+#logoLeaderboardSong {
     background-image: url("../../../pictures/scoresaber_icon_32x32.png");
     background-repeat: no-repeat;
     background-size: contain;
