BigBSR and Miss display
- Add extras on the setup panel
- Add BigBSR management
- Add Display Miss management
- Fix player name placement on the player card
- Little modification of the min value in the Pos-X
- Little modification on the WebSocket manager
- Less time for WebSocket reconnection try

--- a/skins/playerCard/freemium/style.css
+++ b/skins/playerCard/freemium/style.css
@@ -111,6 +111,19 @@
     margin-right: 10px;
 }
 
+#playerInformation {
+    display: flex;
+}
+
+#playerCard-overlay.top-left #playerInformation,
+#playerCard-overlay.bottom-left #playerInformation {
+    justify-content: flex-start;
+}
+#playerCard-overlay.top-right #playerInformation,
+#playerCard-overlay.bottom-right #playerInformation {
+    justify-content: flex-end;
+}
+
 #playerName {
     padding: 0 10px 0 10px;
 
