Support of Audica
- Support of Audica game,
- Fix ranked/qualified colour
- Mapper [] is now done by JS, not CSS (Audica seems to send "null" in mapper data sometimes)

--- a/skins/songCard/freemium/style.css
+++ b/skins/songCard/freemium/style.css
@@ -273,12 +273,12 @@
 }
 
 #qualified {
-    background-color: #646464;
+    background-color: #646464 !important;
     display: none;
 }
 
 #ranked {
-    background-color: #c4a335;
+    background-color: #c4a335 !important;
     display: none;
 }
 
@@ -326,14 +326,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-}
-
-#mapper::before {
-    content: " - [";
-}
-
-#mapper::after {
-    content: "]";
 }
 /* =======================
    = SONG TAGS/ Info end =
