Add SynthRiders support
- Add SynthRiders game full support
- No ip changer for the websocket (Not implemented in the mod)
- Why the mod don't send the cover ???

--- a/style.global.css
+++ b/style.global.css
@@ -87,7 +87,7 @@
 .Expert {
     background-color: #de2d1b !important;
 }
-.ExpertPlus, .Cardio {
+.ExpertPlus, .Cardio, .Master {
     background-color: #6610f2 !important;
 }
 
