Add support of Adofai game
- Support of Adofai game
- Fix round of percentage in song
- Fix song card display on SynthRiders
- Add IP params in SynthRiders websocket (Yeah, you can reach the websocket with a tweak into your game folder ...)
- Fix color on the miss / fc on Dietah skin
- Fix for cover (Cover mode instead of Contain)

--- a/skins/songCard/default/style.css
+++ b/skins/songCard/default/style.css
@@ -64,7 +64,7 @@
 
     background-image: url("../../../pictures/default/defaultSong.jpg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 
     filter: drop-shadow(0 0 0.25rem black)
             drop-shadow(0 0 0.25rem black);
@@ -244,6 +244,28 @@
 }
 #bsrKey::before {
     content: "!bsr ";
+}
+
+#performanceGroup {
+    width: 200px;
+    margin-top: -20px;
+    margin-left: 100px;
+
+    position: absolute;
+    display: none;
+    flex-direction: column;
+}
+#progression {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+#hits {
+    margin-top: 5px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 #songDataInfoBar {
