Little update for making it working on new dev laptop - Add .js for import in all files - Update dependencies - Add some parameters in webpack.config.js - Add Tailwind for futur use - Modification of README.md - Add package-lock.json and tsconfig,json

--- a/style.global.css
+++ b/style.global.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* ====================
    = @font-face start =
    ==================== */
